LogAlyzer/force-app/main/default/objects/Log_File__c/Log_File__c.object-meta.xml
<CustomObject>
    <description>Object representing a single log file</description>
    <label>Log File</label>
    <nameField>
        <displayFormat>L{0000}</displayFormat>
        <label>LogNumber</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Log Files</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>