LogAlyzer/force-app/main/default/objects/Log_File__c/fields/Apex_Log__c.field-meta.xml
<CustomField>
    <fullName>Apex_Log__c</fullName>
    <formula>HYPERLINK('/p/setup/layout/ApexDebugLogDetailEdit/d?apex_log_id=' +  LogId__c  , 'View')</formula>
    <label>Apex Log</label>
    <type>Text</type>
</CustomField>