LogAlyzer/force-app/main/default/objects/Log_File__c/fields/API_Version__c.field-meta.xml
<CustomField>
    <fullName>API_Version__c</fullName>
    <label>API Version</label>
    <length>5</length>
    <type>Text</type>
</CustomField>