LogAlyzer/force-app/main/default/objects/Log_File__c/fields/Log_Level__c.field-meta.xml
<CustomField>
    <fullName>Log_Level__c</fullName>
    <label>Log Level</label>
    <type>TextArea</type>
</CustomField>