LogAlyzer/force-app/main/default/objects/Log_File__c/fields/Log_Line_Count__c.field-meta.xml
<CustomField>
    <fullName>Log_Line_Count__c</fullName>
    <label>Log Line Count</label>
    <summaryForeignKey>Log_Line__c.Log_File__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>