LogAlyzer/force-app/main/default/objects/Log_File__c/fields/Log_Processed__c.field-meta.xml
<CustomField>
    <fullName>Log_Processed__c</fullName>
    <label>Log Processed</label>
    <type>DateTime</type>
</CustomField>