LogAlyzer/force-app/main/default/objects/Log_File__c/fields/LogId__c.field-meta.xml
<CustomField>
    <fullName>LogId__c</fullName>
    <label>LogId</label>
    <length>18</length>
    <type>Text</type>
</CustomField>