LogAlyzer/force-app/main/default/objects/Log_File__c/fields/Running_User__c.field-meta.xml
<CustomField>
    <fullName>Running_User__c</fullName>
    <label>Running User</label>
    <length>80</length>
    <type>Text</type>
</CustomField>