LogAlyzer/force-app/main/default/objects/Log_File__c/fields/Running_User_Id__c.field-meta.xml
<CustomField>
    <fullName>Running_User_Id__c</fullName>
    <label>Running User Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>