LogAlyzer/force-app/main/default/objects/Log_File__c/fields/Timezone__c.field-meta.xml
<CustomField>
    <fullName>Timezone__c</fullName>
    <label>Timezone</label>
    <length>100</length>
    <type>Text</type>
</CustomField>